Fix: Footer alignment on all pages

--- a/app/assets/stylesheets/base/_global.scss
+++ b/app/assets/stylesheets/base/_global.scss
@@ -35,6 +35,8 @@ body {
   @media (min-width: $break-large) {
     text-align: right;
     padding-right: $padding * 6;
+
+    .full-width & { text-align: center; }
   }
 }
 
